# SAGE---Simulink-Analysis-and-Graph-Evaluation

./: CMakeLists.txt  README.md
include/: Archiver.h  CLI.h  Comparer.h  DataFrame.h  Graph.h  Logger.h  Parser.h  SAGE.h  SAGE_Engine.h
src/: Archiver.cpp  CLI.cpp  Comparer.cpp  DataFrame.cpp  Logger.cpp  Parser.cpp  SAGE.cpp  SAGE_Engine.cpp
